tests/fail/pipeline/declarative_showcase/UI.kira
annotation State {
}

annotation Binding {
}

annotation Env {
}


construct Widget {
    annotations {
        @State;
        @Binding;
        @Env;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
        onDisappear() {}
        onChange(of: value) {}
    }

    builder {
        content;
    }

    representation {
        children: [Widget];
    }
}

Widget Card(title: String) {
    @State
    let selected: Int = 0;

    content {
        "Card"
    }

    onAppear() {
        return;
    }
}

@Main
function entry() {
    return;
}
